tamaño width del contenedor de agentes

--- a/css/agentes.css
+++ b/css/agentes.css
@@ -2716,9 +2716,15 @@ footer{
 }
 
 @media screen and (max-width:375px){
+
+    .container-agentes-principal{
+        width: 90%;
+    }
+
     .container-agentes{
+        width: 100%;
         gap: 1rem;
-        padding-left: 2rem;
+        padding-left: 1.5rem;
     }
 
 }
