cambio de tipo de borde

--- a/css/agentes.css
+++ b/css/agentes.css
@@ -231,13 +231,10 @@ aside{
     background-size: cover;
     border-radius: 1rem;
     border: 3px solid var(--color--hover2);
-
-
-
 }
 
 .container__agente:hover{
-    border: 3px ridge var(--boton-color);
+    border: 3px solid var(--boton-color);
 }
 
 .container__agente.overlay{
@@ -272,7 +269,7 @@ aside{
     box-shadow: 2px 2px 4px white;
     overflow: visible;
     background: var(--main-color);
-    border: 3px ridge var(--boton-color);
+    border: 3px solid var(--boton-color);
 
 }
 
