--- a/css/nav.css
+++ b/css/nav.css
@@ -3528,6 +3528,16 @@ h1{
 
 @media screen and (max-width:393px){
 
+    .contenido__480{
+        width: 25rem;
+        height: 7rem;
+        margin-top: -11rem;
+    }
+
+    .contenido__480 p{
+        font-size: 1rem;     
+    }
+
     .card__alerta{
         margin-left: 0rem;
         margin-top: -25rem;
@@ -3628,6 +3638,59 @@ h1{
     .objetivo__item p{
         font-size: 1rem;
         width: 40vh; 
+        height: 7rem;
+         
+    }
+}
+
+@media screen and (max-width:375px){
+
+    .logo__tittle{
+        margin-left: 1.5rem;
+    }
+    
+    .menu__container{
+        width: 90%;
+        display: flex;
+        justify-content: end;
+        
+    }
+
+    .btn__singup{
+        font-size: 0.9rem;
+        width: 5rem;
+        height: 3rem;
+    }
+
+ 
+    .logos__item{
+        width: 70%;
+    }
+
+    .container__logos--item{
+        margin-left: 6rem;
+        
+    }
+
+    .logo{
+        margin-top: 3.5rem;
+        width: 3.5rem; 
+    }
+
+    .logo a i{
+        font-size: 1.6rem;   
+    }
+           
+    .objetivo__item{
+        width: 35vh;
+        height:max-content;
+        margin-top: -1rem;
+        margin-left: 0;
+    } 
+
+    .objetivo__item p{
+        font-size: 1rem;
+        width: 35vh; 
         height: 7rem;
          
     }
